--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>The Leasers - Coming Soon</title>
-  <style>
-    body {
-      background-color: #111;
-      color: #f1c40f;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 100px;
-    }
-    h1 {
-      font-size: 3rem;
-    }
-    p {
-      font-size: 1.2rem;
-      color: #ccc;
-    }
-  </style>
-</head>
-<body>
-  <h1>The Leasers</h1>
-  <p>Coming Soon: The most powerful real estate platform in Jaipur</p>
-</body>
-</html>
+<html><head><title>The Leasers</title></head><body><h1>Welcome to The Leasers</h1><p>Premium Commercial & Residential Real Estate in Jaipur.</p><a href='contact.html'>Contact Us</a></body></html>
