--- a/index.html
+++ b/index.html
@@ -1,1 +1,109 @@
-<html><head><title>The Leasers</title></head><body><h1>Welcome to The Leasers</h1><p>Premium Commercial & Residential Real Estate in Jaipur.</p><a href='contact.html'>Contact Us</a></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>The Leasers - Premium Real Estate</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #111;
+      color: #fff;
+    }
+    header {
+      background: linear-gradient(90deg, #000, #222);
+      padding: 60px 30px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 48px;
+      color: #f1c40f;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 20px;
+      color: #ccc;
+    }
+    .cta {
+      margin-top: 30px;
+    }
+    .cta a {
+      text-decoration: none;
+      background-color: #f1c40f;
+      color: #000;
+      padding: 15px 30px;
+      border-radius: 6px;
+      font-weight: bold;
+    }
+    .section {
+      padding: 60px 30px;
+      text-align: center;
+    }
+    .section h2 {
+      color: #f1c40f;
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+    .cards {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      flex-wrap: wrap;
+    }
+    .card {
+      background-color: #222;
+      border: 1px solid #333;
+      padding: 20px;
+      width: 300px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #000;
+    }
+    .card h3 {
+      color: #f1c40f;
+      margin-bottom: 10px;
+    }
+    .card p {
+      color: #ccc;
+      font-size: 14px;
+    }
+    footer {
+      text-align: center;
+      padding: 30px;
+      background-color: #000;
+      color: #888;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>The Leasers</h1>
+    <p>Only the Best Deals. Premium Commercial & Residential Spaces in Jaipur</p>
+    <div class="cta">
+      <a href="#properties">Explore Properties</a>
+    </div>
+  </header>
+
+  <div class="section" id="properties">
+    <h2>Featured Listings</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>📍 Vaishali Nagar</h3>
+        <p>3 BHK Luxury Apartment – ₹32,000/month</p>
+      </div>
+      <div class="card">
+        <h3>📍 Vishwakarma Industrial Area</h3>
+        <p>Warehouse 8,000 sq.ft – ₹18/sq.ft</p>
+      </div>
+      <div class="card">
+        <h3>📍 Malviya Nagar</h3>
+        <p>Office Space 1200 sq.ft – ₹55,000/month</p>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    &copy; 2025 The Leasers. All rights reserved.
+  </footer>
+</body>
+</html>
