--- a/about.html
+++ b/about.html
@@ -1,1 +1,24 @@
-<html><head><title>About Us</title></head><body><h1>About The Leasers</h1><p>We provide top-tier real estate services in Jaipur.</p></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>About Us - The Leasers</title>
+  <style>
+    body { background-color: #111; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header { background-color: #000; padding: 40px; text-align: center; }
+    header h1 { color: #f1c40f; }
+    section { padding: 50px; text-align: center; }
+    h2 { color: #f1c40f; font-size: 30px; }
+    p { color: #ccc; font-size: 16px; max-width: 700px; margin: auto; }
+  </style>
+</head>
+<body>
+  <header><h1>About The Leasers</h1></header>
+  <section>
+    <h2>Real Estate, Real Results</h2>
+    <p>The Leasers is Jaipur’s leading real estate agency for premium commercial spaces and residential rentals. 
+    We specialize in high-return properties, industrial warehouses, and bespoke leasing solutions for corporates and HNIs.</p>
+  </section>
+</body>
+</html>
