--- a/services.html
+++ b/services.html
@@ -1,1 +1,30 @@
-<html><head><title>Services</title></head><body><h1>Our Services</h1><ul><li>Commercial Rentals</li><li>Premium Residential Leasing</li><li>Plots, Farmhouses, Warehouses</li></ul></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Our Services - The Leasers</title>
+  <style>
+    body { background-color: #111; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header { background-color: #000; padding: 40px; text-align: center; }
+    header h1 { color: #f1c40f; }
+    section { padding: 50px; }
+    h2 { color: #f1c40f; }
+    ul { list-style: none; padding: 0; max-width: 600px; margin: auto; }
+    li { padding: 10px; border-bottom: 1px solid #333; color: #ccc; font-size: 16px; }
+  </style>
+</head>
+<body>
+  <header><h1>Our Services</h1></header>
+  <section>
+    <h2>What We Offer</h2>
+    <ul>
+      <li>Commercial Rentals & Office Spaces</li>
+      <li>Premium Residential Leasing</li>
+      <li>Industrial Warehouses & Plots</li>
+      <li>Farmhouses & Luxury Properties</li>
+      <li>Legal Assistance & Lease Documentation</li>
+    </ul>
+  </section>
+</body>
+</html>
