--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,27 @@
-<html><head><title>Contact</title></head><body><h1>Contact Us</h1><form><input placeholder='Name'><input placeholder='Phone'><textarea placeholder='Message'></textarea><button>Send</button></form></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact - The Leasers</title>
+  <style>
+    body { background-color: #111; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header { background-color: #000; padding: 40px; text-align: center; }
+    header h1 { color: #f1c40f; }
+    section { padding: 50px; text-align: center; }
+    input, textarea { padding: 10px; width: 300px; margin: 10px; border: none; border-radius: 5px; }
+    button { padding: 12px 30px; background-color: #f1c40f; border: none; font-weight: bold; cursor: pointer; }
+  </style>
+</head>
+<body>
+  <header><h1>Contact Us</h1></header>
+  <section>
+    <form>
+      <input type="text" placeholder="Your Name" required><br>
+      <input type="email" placeholder="Your Email" required><br>
+      <textarea placeholder="Your Message" rows="5"></textarea><br>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+</body>
+</html>
