--- a/listings.html
+++ b/listings.html
@@ -1,1 +1,32 @@
-<html><head><title>Property Listings</title></head><body><h1>Available Properties</h1><div><p>📍 Vishwakarma Industrial Area<br>₹18/sq.ft</p></div><div><p>📍 Malviya Nagar<br>2 BHK | ₹25,000</p></div></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Listings - The Leasers</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header><h1>Property Listings</h1><nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+</nav></header>
+<section>
+  <div class="card">
+    <h3>📍 Vishwakarma Industrial Area</h3>
+    <p>Warehouse – 8,000 sq.ft @ ₹18/sq.ft</p>
+  </div>
+  <div class="card">
+    <h3>📍 Vaishali Nagar</h3>
+    <p>3 BHK – ₹32,000/month</p>
+  </div>
+  <div class="card">
+    <h3>📍 Malviya Nagar</h3>
+    <p>Office – 1,200 sq.ft @ ₹55,000/month</p>
+  </div>
+</section>
+<footer><p>&copy; 2025 The Leasers</p></footer>
+</body>
+</html>
