--- a/about.html
+++ b/about.html
@@ -3,22 +3,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About Us - The Leasers</title>
-  <style>
-    body { background-color: #111; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background-color: #000; padding: 40px; text-align: center; }
-    header h1 { color: #f1c40f; }
-    section { padding: 50px; text-align: center; }
-    h2 { color: #f1c40f; font-size: 30px; }
-    p { color: #ccc; font-size: 16px; max-width: 700px; margin: auto; }
-  </style>
+  <title>About - The Leasers</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><h1>About The Leasers</h1></header>
-  <section>
-    <h2>Real Estate, Real Results</h2>
-    <p>The Leasers is Jaipur’s leading real estate agency for premium commercial spaces and residential rentals. 
-    We specialize in high-return properties, industrial warehouses, and bespoke leasing solutions for corporates and HNIs.</p>
-  </section>
+<header><h1>About The Leasers</h1><nav>
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="listings.html">Listings</a>
+    <a href="contact.html">Contact</a>
+</nav></header>
+<section>
+  <p>We are Jaipur’s luxury property experts specializing in commercial, residential, and industrial leasing. We serve MNCs, startups, and HNI clients with pride.</p>
+</section>
+<footer><p>&copy; 2025 The Leasers</p></footer>
 </body>
 </html>
