--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact - The Leasers</title>
-  <style>
-    body { background-color: #111; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background-color: #000; padding: 40px; text-align: center; }
-    header h1 { color: #f1c40f; }
-    section { padding: 50px; text-align: center; }
-    input, textarea { padding: 10px; width: 300px; margin: 10px; border: none; border-radius: 5px; }
-    button { padding: 12px 30px; background-color: #f1c40f; border: none; font-weight: bold; cursor: pointer; }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><h1>Contact Us</h1></header>
-  <section>
-    <form>
-      <input type="text" placeholder="Your Name" required><br>
-      <input type="email" placeholder="Your Email" required><br>
-      <textarea placeholder="Your Message" rows="5"></textarea><br>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+<header><h1>Contact Us</h1><nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="listings.html">Listings</a>
+</nav></header>
+<section>
+  <p>Send your queries on WhatsApp or fill this basic contact form below (non-functional demo):</p>
+  <form>
+    <input placeholder="Your Name"><br><br>
+    <input placeholder="Phone Number"><br><br>
+    <textarea placeholder="Your Message"></textarea><br><br>
+    <button>Send</button>
+  </form>
+</section>
+<footer><p>&copy; 2025 The Leasers</p></footer>
 </body>
 </html>
