--- a/services.html
+++ b/services.html
@@ -3,28 +3,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Our Services - The Leasers</title>
-  <style>
-    body { background-color: #111; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background-color: #000; padding: 40px; text-align: center; }
-    header h1 { color: #f1c40f; }
-    section { padding: 50px; }
-    h2 { color: #f1c40f; }
-    ul { list-style: none; padding: 0; max-width: 600px; margin: auto; }
-    li { padding: 10px; border-bottom: 1px solid #333; color: #ccc; font-size: 16px; }
-  </style>
+  <title>Services - The Leasers</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><h1>Our Services</h1></header>
-  <section>
-    <h2>What We Offer</h2>
-    <ul>
-      <li>Commercial Rentals & Office Spaces</li>
-      <li>Premium Residential Leasing</li>
-      <li>Industrial Warehouses & Plots</li>
-      <li>Farmhouses & Luxury Properties</li>
-      <li>Legal Assistance & Lease Documentation</li>
-    </ul>
-  </section>
+<header><h1>Our Services</h1><nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="listings.html">Listings</a>
+    <a href="contact.html">Contact</a>
+</nav></header>
+<section>
+  <p>Commercial Leasing | Premium Residential Rentals | Warehouses | Farmhouses | Plots & Sale | Legal Assistance</p>
+</section>
+<footer><p>&copy; 2025 The Leasers</p></footer>
 </body>
 </html>
